--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 img {
   display: block;
   max-width: 100%;
+  
 }
 
 .conteiner {
@@ -18,9 +19,24 @@ img {
   list-style: none;
 }
 
+.slide:hover {
+  will-change: transform;
+}
+
 .slide li {
   flex-shrink: 0;
   width: 80vw;
   max-width: 800px;
   margin: 0 20px;
+  opacity: 0.7;
+  transform: scale(0.8);
+  transition: all .3s ease;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.267);
+}
+
+.slide li.ativo {
+  opacity: 1;
+  transform: scale(1);
 }
